--- a/public/index1.html
+++ b/public/index1.html
@@ -20,6 +20,7 @@
           <a href="#">Gallery</a>
           <a href="/login.html">login.html</a>
           <a href="/register.html">sign up</a>
+          <input type="button">
         </div>
       </div>
     </header>
